<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    tools:context=".ThirdActivity">

    <LinearLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:background="@android:color/holo_blue_bright">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="#FDF6F6"
            android:text="@string/click_the_buttons_to_find_the_functionality_of_each_element_from_left_to_right"
            android:textColorHighlight="#F3ECEC"
            android:textColorLink="#FFFFFF" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="70"
        android:background="@drawable/chess" >

        <Button
            android:id="@+id/boat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="viewBoat"
            android:text="@string/boat" />

        <Button
            android:id="@+id/horse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/boat"
            android:onClick="viewHorse"
            android:text="@string/horse"
            android:layout_toEndOf="@+id/boat" />

        <Button
            android:id="@+id/elephant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/horse"
            android:onClick="viewElephant"
            android:text="@string/elephant"
            android:layout_toEndOf="@+id/horse" />


        <Button
            android:id="@+id/king"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/elephant"
            android:onClick="viewKing"
            android:text="@string/king"
            android:layout_toEndOf="@+id/elephant" />

        <Button
            android:id="@+id/minister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/king"
            android:onClick="viewMinister"
            android:text="@string/minister"
            android:layout_toEndOf="@+id/king" />
    </RelativeLayout>


</android.widget.LinearLayout>